TestSuite/errors/err0131.pas

const 
    b : set of byte = ['aa'];
    
begin
end.